<resources>
    <string name="app_name">PopularMovies</string>
    <string name="loading">Loading...</string>
    <string name="error_loading">Loading error</string>
    <string name="error_result">Check connection</string>
    <string name="try_loading">try again</string>
    <string name="poster">Poster</string>
    <string name="next_page">Next page</string>
    <string name="previous_page">Previous page</string>
    <string name="list_popular_movies">LIST OF POPULAR FILMS</string>
    <string name="origin_name_title">Original name:</string>
    <string name="release_date">Release date:</string>
    <string name="country">Country:</string>
    <string name="budget">Budget $:</string>
    <string name="revenue">Revenue $:</string>
    <string name="genres">Genres:</string>
    <string name="popularity">Popularity:</string>
    <string name="rating">Rating:</string>
    <string name="runtime">Runtime</string>
    <string name="minutes">min.</string>
    <string name="unknown_all">no data</string>
</resources>
